refactor: 重构异常处理机制并优化管道实现
- 重构DefaultExceptionHandler，增强异常处理能力
- 添加重试策略和异常过滤器支持
- 优化PipelineContext的线程安全性
- 改进DefaultPipeline的实现，提高可维护性
- 更新ExceptionHandler接口，提供更多灵活性